# scratch

./: .gitignore  2021-11-06-word-vectors-from-scratch.ipynb  README.md  requirements.txt  update_table.py
2021-08-28-raytracer-ts/: .gitignore  .pre-commit-config.yaml  .prettierrc  README.md  meta.yml  package.json
2021-09-26-valheim-viz/: README.md  Valheim_Food_EDA.ipynb  meta.yml  pyproject.toml
2021-09-26-valheim-viz/data/: Valheim_Food_Dataset.csv  Valheim_Food_Dataset_Annotated.csv
2021-11-06-word-vectors-from-scratch/: 2021-11-06-word-vectors-from-scratch.ipynb  meta.yml
2021-11-19-spacy-contributors/: 2021-11-19-spacy-contributors.ipynb  meta.yml
2021-11-24-sankey/: d3-path-arrows.js  d3-sankey-circular.js  example-data.js  index.html  meta.yml
2022-03-08-plotting-datasets/: 2022-03-08-plotting-datasets.ipynb  bd_vs_sd.html  blogpost_with_annotations.tldr  length_vs_freq.html
2022-06-28-prettymaps/: .gitignore  2022-06-28-prettymaps.ipynb  download_fonts.sh  meta.yml  requirements.txt
2022-07-12-spancat-inspection/: 2022-07-12-check-softmax.ipynb  README.md  meta.yml
2022-10-05-fsa/: 2022-10-05-fsa.ipynb  meta.yml
2022-11-19-drg/: .gitignore  2022-11-19-drg-web-scraping.ipynb  2022-11-21-drg-analysis.ipynb  2022-11-30-get-all-loadouts.ipynb  aeo_damag.html  heatmap.html  meta.yml  number_of_builds_per_class.html  oc_types.html  oc_types_primary.html  oc_types_secondary.html  primary.html  primary_pop.html  scraper.py  secondary.html  secondary_pop.html  vuln.py
2023-02-16-ukp-argmin/: .gitignore  README.md  meta.yml  project.yml  requirements.txt
2023-03-03-langchain/: .gitignore  README.md  meta.yml  project.yml  requirements.txt
2023-04-12-fun-coding/: binary_tree.py  data_structure.py  general.py  meta.yml  spiral_matrix.py  strings.py  two_sum.py
2023-04-15-adapter-networks/: meta.yml
2023-06-26-plotting/: plotting.ipynb
2023-07-25-llm-tl/: .gitignore  README.md  meta.yml  project.yml  requirements.txt
2025-07-11-aseprite-mcp/: .env.template  .gitignore  .pre-commit-config.yaml  README.md  agent.py  meta.yml  pyproject.toml
2025-07-11-aseprite-mcp/aseprite_mcp/: aseprite.py  server.py
(+200 files in other folders)
